play/src/front/style/style.css
* a,
button,
select {
    cursor: pointer;
}
body {
    overflow: hidden;
}

body button:focus,
body img:focus,
body input:focus {
    /*outline: -webkit-focus-ring-color auto 0;*/
    outline: none;
}

body .message-info {
    width: 20%;
    height: auto;
    min-height: 30px;
    position: absolute;
    top: 5px;
    left: 40%;
    padding-top: 10px;
    text-align: center;
}

body .message-info.error {
    background: red;
}

body .message-info.success {
    background: green;
}

body .message-info.info {
    background: dodgerblue;
}

body .message-info.warning {
    background: #ffa500d6;
}



/* New layout */
body {
    margin: 0;
    height: 100%;
    width: 100%;
}

.main-container {
    height: 100%;
    width: 100%;
    position: absolute;
}

#game {
    iframe {
        pointer-events: all;
    }
}


.chat-mode > div {
    margin: 1%;
    max-height: 96%;
    transition: margin-left 0.2s, margin-right 0.2s, margin-bottom 0.2s, margin-top 0.2s;
    cursor: pointer;
}

.chat-mode > div:hover {
    margin: 0;
}

.chat-mode.one-col {
    grid-template-columns: repeat(1, 1fr);
}

.chat-mode.two-col {
    grid-template-columns: repeat(2, 1fr);
}

.chat-mode.three-col {
    grid-template-columns: repeat(3, 1fr);
}

.chat-mode.four-col {
    grid-template-columns: repeat(4, 1fr);
}

/*GLOBAL MESSAGE*/
.message-container {
    position: absolute;
    width: 80%;
    height: 80%;
    min-height: 200px;
    max-height: 80%;
    top: -80%;
    /*left: 10%;*/
    left: 250px;
    background: #333333;
    z-index: 200;
    transition: all 0.1s ease-out;
    border-radius: 0 0 15px 15px;
}

.message-container {
    height: auto;
    border-radius: 0 0 10px 10px;
    color: white;
    top: 0;
}

.message-container .content-message {
    position: relative;
    padding: 20px;
    margin: 20px;
    overflow: scroll;
    max-height: 400px;
}

.message-container div.clear {
    position: absolute;
    color: white;
    z-index: 200;
    transition: all 0.1s ease-out;
    top: calc(100% + 2px);
    width: 200px;
    height: 40px;
    background-color: #2d2d2dba;
    left: calc(50% - 100px);
    border-radius: 15px 15px 15px 15px;
    text-align: center;
}

.message-container div.clear {
    width: 100px;
    left: calc(50% - 50px);
}

.message-container div.clear img {
    margin-top: 6px;
    width: 30px;
    height: 30px;
    cursor: pointer;
    padding: 0 5px;
    transition: all 0.5s ease;
    transform: rotateY(0);
    opacity: 0.5;
}

.message-container div.clear img:hover {
    opacity: 1;
}

.message-container div.clear img {
    transform: rotateY(3.142rad);
    opacity: 1;
}

.message-container div.clear p {
    margin-top: 12px;
}

.message-container div.clear:hover {
    cursor: pointer;
    top: calc(100% + 5px);
    transform: scale(1.2) translateY(3px);
}

/* VIDEO QUALITY */
.main-console div.setting h1 {
    color: white;
}
.main-console div.setting select {
    background: black;
    color: white;
    min-width: 280px;
    text-align: center;
    min-height: 40px;
    padding: 10px;
    border-radius: 15px;
}
.main-console div.setting select:focus {
    border: solid 1px white;
    outline: none;
}
.main-console div.setting.active section {
    display: block;
}

/*REPORT input*/
div.modal-report-user {
    position: absolute;
    width: 800px;
    height: 600px;
    left: calc(50% - 400px);
    top: 100px;
    background-color: #000000ad;
    border-radius: 15px;
}

.modal-report-user textarea {
    position: absolute;
    height: 200px;
    z-index: 999;
    top: 200px;
    background-color: #000000;
    color: white;
    width: calc(100% - 60px);
    margin: 30px;
    border-radius: 15px;
}

.modal-report-user img {
    position: absolute;
    height: 24px;
    width: 24px;
    z-index: 999;
    left: calc(50% - 12px);
    top: 10px;
}

.modal-report-user img#cancel-report-user {
    position: absolute;
    z-index: 999;
    right: 0;
    left: auto;
    top: 0;
    cursor: pointer;
    width: 15px;
    height: 15px;
    margin: 10px;
}

.modal-report-user button {
    position: absolute;
    top: 450px;
    left: calc(50% - 50px);
    width: 100px;
    border: 1px solid black;
    background-color: #00000000;
    color: #ffda01;
    border-radius: 15px;
    padding: 10px 30px;
    transition: all 0.2s ease;
}
.modal-report-user button:hover {
    cursor: pointer;
    background-color: #ffda01;
    color: black;
    border: 1px solid black;
    transform: scale(1.1);
}

.modal-report-user p#title-report-user {
    font-size: 30px;
    color: white;
    position: absolute;
    top: 30px;
    width: 100%;
    text-align: center;
}

.modal-report-user p#body-report-user {
    font-size: 24px;
    color: white;
    position: absolute;
    top: 70px;
    width: 100%;
    text-align: left;
    padding: 30px;
    max-width: calc(800px - 60px); /* size of modal - padding*/
}

/*MESSAGE*/
.discussion {
    position: fixed;
    left: -300px;
    top: 0;
    width: 220px;
    height: 100%;
    background-color: #333333;
    padding: 20px;
    transition: all 0.5s ease;
}
.discussion.active {
    left: 0;
}
.discussion .active-btn {
    display: none;
    cursor: pointer;
    height: 50px;
    width: 50px;
    background-color: #2d2d2dba;
    position: absolute;
    top: calc(50% - 25px);
    margin-left: 315px;
    border-radius: 50%;
    border: none;
    transition: all 0.5s ease;
}
.discussion .active-btn.active {
    display: block;
}

.discussion .active-btn:hover {
    transform: scale(1.1) rotateY(3.142rad);
}
.discussion .active-btn img {
    width: 26px;
    height: 26px;
    margin: 13px 5px;
}

.discussion .close-btn {
    position: absolute;
    top: 0;
    right: 10px;
    background: none;
    border: none;
    cursor: pointer;
}
.discussion .close-btn img {
    height: 15px;
    right: 15px;
}

.discussion p {
    color: white;
    font-size: 22px;
    padding-left: 10px;
    margin: 0;
}

.discussion .participants {
    height: 200px;
    margin: 10px 0;
}
/* ... */

